bookface_dark.css
/* ... */
	/* SEARCH RESULTS */
	#search-save {
		background-color: var(--link-color) !important;
		color: white !important;
		border-radius: 8px !important;
		padding: 12px !important;
	}
		#search-save:hover,
		#search-save:focus {
			box-shadow: inset 0 0 100px var(--dimbright) !important;
		}
	#search-save .fa-plus::before{
		content: '\f292' !important;
	}
	#search-save .fa-floppy-o::before {
		content: '\f00e' !important;
	}
	#search-save .fa-floppy-o::before,
	#search-save .fa-plus::before {
		display: inline-block;
		margin-top: 2px;
	}
	#search-save .fa-plus::before {
		display: inline-block;
		margin-top: 2px;
	}
	/* popovers */
	.popover.hovercard {
		border: 1px solid var(--nav-bg) !important;
		-webkit-box-shadow: 0 10px 100px var(--shadowglow);
  		-moz-box-shadow: 0 10px 100px var(--shadowglow);
  		box-shadow: 0 10px 100px var(--shadowglow);
	} 
		.popover.hovercard	.btn.btn-primary {
			background-color: transparent;
			color: var(--nav-icon-color);
		}
			.popover.hovercard .btn.btn-primary:hover {
				background-color: rgba(128,128,128,.1);
			}
	.hover-card-footer {
		border-color: var(--border-color);
		background-color: var(--nav-bg);
	}
		.hovercard.top > .arrow::after {
			border-top-color: var(--nav-bg);
		}
		.hovercard.right > .arrow::after {
			border-right-color: var(--nav-bg);
		}
		.hovercard.bottom > .arrow::after {
			border-bottom-color: var(--nav-bg);
		}
		.hovercard.left > .arrow::after {
			border-left-color: var(--nav-bg);
		}
	/* sidebar widgets */
	aside .widget,
	.nav-container .widget {
		background-color: var(--background-color) !important;
		-webkit-box-shadow: none !important;
		-moz-box-shadow: none !important;
		box-shadow: none !important;
	}
	aside .badge {
		background-color: var(--link-color);
	}
	/* 	Contributed by Matthias (feb@loma.ml):
		Widgets mit einem Icon versehen
		Gemeinsame Basisregeln für alle Sidebar-Icons */	
	aside .widget.fakelink h3::before {
		font-family: "ForkAwesome";
		margin-right: 8px;
		font-size: 14px;
	}
	
	/* Individuelle Icons */
	#circle-sidebar-inflated.fakelink h3::before,
	#circle-sidebar .fakelink h3::before { content: "\f2bd"; } /* user-circle */
	#saved-search-list-inflated.fakelink h3::before,
	#saved-search-list .fakelink h3::before { content: "\f002"; } /* search */
	#group-list-sidebar-inflated.fakelink h3::before,
	#group-list-sidebar .fakelink h3::before { content: "\f0c0"; } /* users */
	#nets-sidebar-inflated.fakelink h3::before,
	#nets-sidebar .fakelink h3::before { content: "\f233"; } /* server */
	#trending-tags-sidebar-inflated.fakelink h3::before,
	#trending-tags-sidebar .fakelink h3::before,
	#tagblock-inflated.fakelink h3::before,
	#tagblock faklink h3::before { content: "\f02b"; } /* tag */
	#datebrowse-sidebar-inflated.fakelink h3::before,
	#datebrowse-sidebar .fakelink h3::before { content: "\f187"; } /* archive */
	#file-sidebar-inflated.fakelink h3::before,
	#file-sidebar .fakelink h3::before { content: "\f07b"; } /* folder */
	#channel-sidebar-inflated.fakelink h3::before,
	#channel-sidebar .fakelink h3::before { content: "\f009"; } /* th-large */
	#accounttype-sidebar-inflated.fakelink h3::before,
	#accounttype-sidebar .fakelink h3::before { content: "\f0e9"; } /* umbrella */
	#sidebar-community-no-sharer-inflated.fakelink h3::before,
	#sidebar-community-no-sharer .fakelink h3::before { content: "\f2c0"; } /* user-o */
	#rel-sidebar-inflated.fakelink h3::before,
	#rel-sidebar .fakelink h3::before { content: "\f2b5"; } /* handshake-o */
	#category-sidebar-inflated.fakelink h3::before,
	#category-sidebar .fakelink h3::before { content: "\f00b"; } /* th-list */

	aside .widget.inflated.fakelink h3::after {
		font-family: "ForkAwesome";
  		content: "\f0d7";
  		display: inline-block;
  		float: right;
	}
	
	aside .widget.inflated:hover,
	aside .widget.inflated:focus,
	aside .widget.inflated:active,
	aside .widget.inflated:focus-within {
		background-color: var(--nav-bg) !important;
	}
		aside .widget.inflated h3 {
			padding-bottom: 0px;
		}		
	
/* POSTS */
.tread-wrapper {
	background-color: var(--content-bg) !important;
	box-shadow: 0 0px 1px var(--border-color) !important; 
	border-radius: 10px !important;
}
	/* Thread hover effects */ 
	.desktop-view .wall-item-container .wall-item-content a,
	.desktop-view .wall-item-name,
	.desktop-view .wall-item-container .fakelink,
	.desktop-view .toplevel_item .fakelink,
	.desktop-view .toplevel_item .wall-item-container .wall-item-responses a {
		color: var(--font-color);
	}
	
	.toplevel_item:hover .fakelink,
	.wall-item-container:hover .fakelink,
	.toplevel_item:hover .wall-item-container:hover .wall-item-responses a,
	.toplevel_item:hover .wall-item-content a,
	.toplevel_item:hover .wall-item-name,
	.wall-item-container:hover .wall-item-content a,
	.wall-item-container:hover .wall-item-name,
	.wall-item-container:hover .wall-item-location a {
		color: var(--link-color);
	}
	.wall-item-container {
		border-top: none;
	}
	.wall-item-container .media {
		background-color: var(--content-bg) !important;
	    box-shadow: 0 0px 1px var(--border-color) !important; 
		border-radius: 10px !important;
	}
	.wall-item-container iframe {
		width: 100% !important;
		height: auto !important;
		display: block;
		margin: 0 auto;
		aspect-ratio: 16/9;
		border: 1px solid var(--border-color);
		border-radius: 8px;
		background-color: var(--background-color);
	}
.well {
       -webkit-box-shadow: none !important;
       box-shadow: none !important;
}
       .contact-photo,
       .contact-photo-xs {
              border-radius: 100% !important;
              border: 1px solid var(--nav-bg) !important;
       }
	
	.media-list > li:hover,
	.media-list > li.selected,
	.media-list > li.active {
		border-left-color: var(--link-color);
	}
	.contact-wrapper .media-body .contact-entry-name h4.media-heading a {
		color: var(--link-color);
	}
/* ... */

